fix: fix loading state container height too small

--- a/packages/client/src/components/document/reader/public/index.module.scss
+++ b/packages/client/src/components/document/reader/public/index.module.scss
@@ -14,6 +14,7 @@
     overflow: auto;
 
     .editorWrap {
+      min-height: 100%;
       padding-bottom: 24px;
 
       &.isStandardWidth {
